[gd_scene load_steps=10 format=2]

[ext_resource path="res://shared_assets/UI/buttonUP.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI/Main Menu/DefaultPortrait.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/HUD/MoneyRect/CharacterMoneyPanel.gd" type="Script" id=3]
[ext_resource path="res://Fonts/BlackChancery.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="CharacterMoneyPanel" type="Control"]
margin_right = 455.0
margin_bottom = 80.0
rect_min_size = Vector2( 455, 80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = 18.0
margin_right = 153.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Character"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitTextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 56.0
margin_top = -31.0
margin_right = 100.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = -28.5
margin_right = 216.0
margin_bottom = -11.5
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Gold :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemsLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = -8.5
margin_right = 216.0
margin_bottom = 8.5
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Gems :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JewelsLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = 13.5
margin_right = 216.0
margin_bottom = 30.5
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Jewels :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldnLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 222.0
margin_top = -27.0
margin_right = 392.0
margin_bottom = -13.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "999999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightnLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -19.0
margin_right = 2.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "20000 / 20000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovenLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -102.0
margin_top = 3.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemsnLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 222.0
margin_top = -7.0
margin_right = 392.0
margin_bottom = 7.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "999999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JewelsnLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 222.0
margin_top = 16.0
margin_right = 392.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "999999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -20.0
margin_bottom = -3.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "Weight :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -152.0
margin_top = 2.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "Move :"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
